--- a/css/hero-slider-style.css
+++ b/css/hero-slider-style.css
@@ -212,10 +212,10 @@ Single slide style
   background-color: #2c343b;  
 }
 .cd-hero-slider li:nth-of-type(2) {
-  background-color: #3d4952;  
+  background-color: #2c343b;  
 }
 .cd-hero-slider li:nth-of-type(3) {
-  background-color: #cdcdcd;  
+  background-color: #2c343b;  
 }
 .cd-hero-slider li:nth-of-type(4) {
   background-color: #2c343b;
